--- a/Cine_Max/Index.html
+++ b/Cine_Max/Index.html
@@ -17,9 +17,12 @@
     <header>Cine Max</header>
 
     <div></div>
-    <div id="main" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+    <div id="main"
+        style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
         <nav>
-            <p id="menuTitle" style="font-size: 20px;padding-bottom: 5px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; ">Cadastro</p>
+            <p id="menuTitle"
+                style="font-size: 20px;padding-bottom: 5px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; ">
+                Cadastro</p>
             <div id="form" style="font-size: 10; color:white;">
                 <table>
                     <tr>
@@ -28,34 +31,70 @@
                     </tr>
                     <tr>
                         <td>Filme: </td>
-                        <td class="td2"><select name="filme" style="border-radius: 20px;;">                            
-                            <option value="0" style="border-radius: 20px;"></option>
-                            <option value="filme1">A Volta dos que não Foram</option>
-                            <option value="filme2"> As tranças da Vovó Careca</option>
-                            <option value="filme3">O Skate do Saci</option>
-                          </select></td>
+                        <td class="td2"><select name="filme" style="border-radius: 20px;;">
+                                <option value="0" style="border-radius: 20px;"></option>
+                                <option value="filme1">A Volta dos que não Foram</option>
+                                <option value="filme2"> As tranças da Vovó Careca</option>
+                                <option value="filme3">O Skate do Saci</option>
+                            </select></td>
                     </tr>
                     <tr>
                         <td>Grupo: </td>
-                        <td class="td2"><select name="grupo" style="border-radius: 20px;;">                            
-                        <option value="0" style="border-radius: 20px;">- Qntd. de Pessoas</option>
-                        <option value="grupo1">1</option>
-                        <option value="grupo2">2</option>
-                        <option value="grupo3">3</option>
-                        <option value="grupo4">4</option>
-                      </select></td>
+                        <td class="td2"><select name="grupo" style="border-radius: 20px;;">
+                                <option value="0" style="border-radius: 20px;">- Qntd. de Pessoas</option>
+                                <option value="grupo1">1</option>
+                                <option value="grupo2">2</option>
+                                <option value="grupo3">3</option>
+                                <option value="grupo4">4</option>
+                            </select></td>
                     </tr>
                     <tr>
-                        <td colspan="2"><button id="check" type="button" Style="font-size:15px; margin-left: 37%; cursor: pointer;border-radius: 20px;">Verificar</td></tr>
+                        <td colspan="2"><button id="check" type="button"
+                                Style="font-size:15px; margin-left: 37%; cursor: pointer;border-radius: 20px;">Verificar
+                        </td>
+                    </tr>
                 </table>
             </div>
         </nav>
         <section id="reserva">
-            <p id="menuTitle" style="font-size: 20px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; padding-bottom: 5px; font-family: -apple-system, BlinkMaZcSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Reserva de Lugares</p>
-            <div id="Cadeiras">
+            <p id="menuTitle"
+                style="font-size: 20px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; padding-bottom: 5px; font-family: -apple-system, BlinkMaZcSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+                Reserva de Lugares</p>
+            <div id="Cadeiras" style="margin-left: 3px; margin-left: 3px">
+                <p class="fileira"
+                    style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 12px; color: white; text-align: center;">
+                    Fileira A</p>
             </div>
+            <table style="width:max-content;">
+                <tr>
+                    <td>
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                    </td>
+                    <td>
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                    </td>
+                    <td>
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                    </td>
+                    <td>
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                    </td>
+                    <td>
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                    </td>
+                    <td>
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                    </td>
+                    <td>
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                    </td>
 
-        </section>
+
+                </tr>
+            </table>
+    </div>
+
+    </section>
     </div>
     <footer></footer>
 </body>
