--- a/Cine_Max/Index.html
+++ b/Cine_Max/Index.html
@@ -68,30 +68,95 @@
             <table style="width:max-content;">
                 <tr>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer;" title="Disponível">        </td>
+                    <td>
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\assento.png">
+                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
-
 
                 </tr>
             </table>
+            <p class="fileira"
+            style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 12px; color: white; text-align: center;">
+            Fileira B</p>
+    <table style="width:max-content;">
+        <tr>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+
+        </tr>
+    </table>
+    <p class="fileira"
+            style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 12px; color: white; text-align: center;">
+            Fileira C</p>
+    <table style="width:max-content;">
+        <tr>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+            <td>
+                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+            </td>
+
+        </tr>
+    </table>
     </div>
 
     </section>
