--- a/Cine_Max/Index.html
+++ b/Cine_Max/Index.html
@@ -17,11 +17,9 @@
     <header>Cine Max</header>
 
     <div></div>
-    <div id="main"
-        style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+    <div id="main" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
         <nav>
-            <p id="menuTitle"
-                style="font-size: 20px;padding-bottom: 5px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; ">
+            <p id="menuTitle" style="font-size: 20px;padding-bottom: 5px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; ">
                 Cadastro</p>
             <div id="form" style="font-size: 10; color:white;">
                 <table>
@@ -49,8 +47,7 @@
                             </select></td>
                     </tr>
                     <tr>
-                        <td colspan="2"><button id="check" type="button"
-                                Style="font-size:15px; margin-left: 37%; cursor: pointer;border-radius: 20px;">Verificar
+                        <td colspan="2"><button id="check" type="button" Style="font-size:15px; margin-left: 37%; cursor: pointer;border-radius: 20px;">Verificar
                         </td>
                     </tr>
                 </table>
@@ -68,27 +65,27 @@
             <table style="width:max-content;">
                 <tr>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer;" title="Disponível">        </td>
+                        <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer;" title="Disponível">        </td>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                        <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                        <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                        <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                        <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                        <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                        <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
                     <td>
-                        <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                        <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
                     </td>
 
                 </tr>
@@ -99,28 +96,28 @@
     <table style="width:max-content;">
         <tr>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
 
         </tr>
@@ -131,28 +128,28 @@
     <table style="width:max-content;">
         <tr>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
             <td>
-                <img src="C:\Users\User\Documents\Projetos\Dev-WEB\Cine_Max\Image\disponivel.png" style="cursor:pointer"  title="Disponível">
+                <img src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Cine_Max/Image/disponivel.png" style="cursor:pointer"  title="Disponível">
             </td>
 
         </tr>
